    partitions. (API change)
  * Added rawPartition to PartSpec, for specifying partitions with no
    filesystem.
  * Added BiosGrubFlag to PartFlag.
  * Run su with --login, to avoid inheriting some problematic environment
    variables, such as TMP, from the caller.
  * Grub: Added properties to configure /etc/default/grub.

 -- Joey Hess <id@joeyh.name>  Tue, 02 Jan 2018 13:06:45 -0400

propellor (5.2.0) unstable; urgency=medium

  [ Joey Hess ]
  * bootstrappedFrom: Set up local privdata file.
  * Parted: Fix names used for FAT and VFAT partitions.
  * Parted: Add an Alignment parameter. (API change)
    A good default to use is safeAlignment, which is 4MiB,
    well suited for inexpensive flash drives, and fine for other disks too.
    Previously, a very non-optimial 1MB (not 1MiB) alignment had been used.
  * DiskImage: Use safeAlignment. It didn't seem worth making the
    alignment configurable here.
  * Fixed rounding bug in Parted.calcPartTable.
  * DiskImage: Fix rsync crash when a mount point does not exist in the
    chroot.
  * Fix bug in unmountBelow that caused unmounting of nested mounts to
    fail.
  * Grub.boots, Grub.bootsMounted: Pass --target to grub-install.
  * Added Propellor.Property.Installer modules, which can be used to create
    bootable installer disk images, which then run propellor to install
    a system. This code was extracted from the demo I gave in my
    talk at DebConf 2017.

  [ Sean Whitton ]
  * Sbuild: add notes about Debian jessie hosts and backports of sbuild and
    autopkgtest.

 -- Joey Hess <id@joeyh.name>  Sat, 30 Dec 2017 13:34:29 -0400

propellor (5.1.0) unstable; urgency=medium

  [ Sean Whitton ]
  * File.isSymlinkedTo now revertable. (minor API change)
  * Sbuild module changes:
    - Type of Sbuild.built changed to accept additional properties to be
      ensured inside schroots. (API change)
      See the suggested usage in module's documentation for new syntax.