@@ -127,6 +127,7 @@ Library
     Propellor.Property.Journald
     Propellor.Property.Kerberos
     Propellor.Property.LetsEncrypt
+    Propellor.Property.Laptop
     Propellor.Property.List
     Propellor.Property.LightDM
     Propellor.Property.Locale
